--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# UNITY
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
@@ -24,3 +25,24 @@ ExportedObj/
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+# WINDOWS
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
