--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,5 @@ $RECYCLE.BIN/
 
 # LARGE FILES
 
-/Gemini_BigG_Sci_Props_Int.psd
-/Gemini_Pod_Int.psd
+Source/Unity Projects/FASA_SHARE/Assets/Gemini/Textures/Gemini_Pod_Int.psd
+Source/Unity Projects/FASA_SHARE/Assets/Gemini/Textures/Gemini_BigG_Sci_Props_Int.psd
