Set decoupling module back to ModuleDecouple
The RO patch addresses ModuleDecouple, there is no benefit to having an Animated module there, and both RN & I agree that any reference to the Animated module should/could use a Module Manager (MM) conditional, ensuring it only uses ModuleAnimatedDecoupler after confirming it exists in the install environment.

--- a/GameData/FASA/Apollo/FASA_Apollo_Fairings/Fairing_3m_4x.cfg
+++ b/GameData/FASA/Apollo/FASA_Apollo_Fairings/Fairing_3m_4x.cfg
@@ -55,10 +55,7 @@ childStageOffset = 1
  bulkheadProfiles = size3
 MODULE
 {
-    // name = ModuleDecouple
-	// ejectionForce = 0.001
-	// explosiveNodeID = bottom
-    name = ModuleAnimatedDecoupler
+    	name = ModuleDecouple
 	ejectionForce = 1
 	explosiveNodeID = bottom
 }
