Science Container update

--- a/GameData/FASA/Apollo/ApolloCSM/FASA_Apollo_CM.cfg
+++ b/GameData/FASA/Apollo/ApolloCSM/FASA_Apollo_CM.cfg
@@ -175,6 +175,7 @@ MODULE
 	storeActionName = Store Experiments
 	evaOnlyStorage = True
 	storageRange = 2.0
+	allowRepeatedSubjects = true
 }
 
 //Reflection shader plugin
