--- a/GameData/FASA/Gemini2/FASA_Gemini_BigG/Gemini_BigG.cfg
+++ b/GameData/FASA/Gemini2/FASA_Gemini_BigG/Gemini_BigG.cfg
@@ -77,6 +77,7 @@ buoyancyUseSine = False
 		storeActionName = Store Experiments
 		evaOnlyStorage = false
 		storageRange = 2.0
+		allowRepeatedSubjects = true
 	}
 
 
