--- a/GameData/FASA/Gemini2/FASA_Agena/Agena_Ant.cfg
+++ b/GameData/FASA/Gemini2/FASA_Agena/Agena_Ant.cfg
@@ -59,14 +59,15 @@ MODULE
 MODULE
 {
 	name = ModuleDataTransmitter
-	
+	antennaType = DIRECT
 	packetInterval = 0.10
 	packetSize = 2
-	
 	packetResourceCost = 4.0
 	requiredResource = ElectricCharge
-		
 	DeployFxModules = 0
+	antennaPower = 500000
+	antennaCombinable = True
+	antennaCombinableExponent = 1
 }
 
 }
