Change all speculars to diffuse
because ReflectionPlugin is broken when using the Specular Shader, needs fix - this is interim

--- a/GameData/FASA/Apollo/LEM/DescentStage/LM_DescentStage.cfg
+++ b/GameData/FASA/Apollo/LEM/DescentStage/LM_DescentStage.cfg
@@ -70,5 +70,60 @@ RESOURCE
 	 maxAmount = 220
 	}
 
+	//Reflection shader plugin
+    MODULE
+    {
+        name = ReflectiveShaderModule
+
+        // Lower values for performance, higher values for aesthetics (you shouldn't ever need to go higher than 1024).
+        CubeMapSize = 32
+
+        // How deep the reflection will be ("how far the reflection camera will view")
+        FarClipPlane = 50000000000
+		// How far away must something be before it is reflected
+		NearClipPlane = .1
+
+        // Set to false to render all 6 faces of the CubeMap at once (six times slower~)
+        OneFacePerFrame = true
+
+        // The shader to find. The reflective shaders are:
+        // Reflective/Diffuse
+        // Reflective/VertexLit
+        // Reflective/Bumped Diffuse
+		//Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
+		realTimeReflection = False
+		
+
+        // The height of the parallax map. Values are accepted between 0.005 and 0.08.
+        ParallaxHeight = 0.01
+
+        // How reflective the reflection will be (Weakest 0.0 - 1.0 Strongest).
+        ReflectionStrength = 0.20
+		//ReflectionColor = 0, 0, 0, 0
+
+        // Use this variable to specify which meshes to apply the shader to.
+        // Not using this variable will default to the first found mesh.
+        // Use the actual mesh name for the value. Or you could use:
+        // all - to replace the shader on all meshes in the model.
+        MeshesToChange = all
+
+        // How shiny the specularity will be (if specular).
+        // This value will be automatically set if it already exists on the previous shader and is not defined here.
+        Shininess = 0.5
+		updateRate = 60
+
+        // These variables should be used together only.
+        // These values will be automatically set if they already exist on the previous shader and are not defined here
+        // These values will be automatically set if they already exist on the previous shader and are not defined here
+        SpecColorR = 0.8
+        SpecColorG = 0.8
+        SpecColorB = 0.8
+        SpecColorA = 0.8
+		rimFalloff = 1.0
+		rimColor = 0.642, 0.6445, 0.6414, 1.0
+		ReflectionColor = 0.6442, 0.6445, 0.64, 0.4
+    }
+
 
 }
