--- a/GameData/FASA/Gemini2/FASA_Gemini_LFT/Merc_LFT_Short_Large.cfg
+++ b/GameData/FASA/Gemini2/FASA_Gemini_LFT/Merc_LFT_Short_Large.cfg
@@ -84,7 +84,7 @@ RESOURCE
         // Reflective/VertexLit
         // Reflective/Bumped Diffuse
 		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
 		realTimeReflection = False
 		
 
