--- a/GameData/FASA/ICBM/FASA_ICBM/ICBM_SAS.cfg
+++ b/GameData/FASA/ICBM/FASA_ICBM/ICBM_SAS.cfg
@@ -92,7 +92,7 @@ MODULE
         // Reflective/VertexLit
         // Reflective/Bumped Diffuse
 		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
 		realTimeReflection = False
 		
 
