--- a/GameData/FASA/Mercury/FASA_Mercury_Atlas/Mercury_AtlasLFT_Long.cfg
+++ b/GameData/FASA/Mercury/FASA_Mercury_Atlas/Mercury_AtlasLFT_Long.cfg
@@ -71,7 +71,7 @@ RESOURCE
         // How deep the reflection will be ("how far the reflection camera will view")
         FarClipPlane = 500000000
 		// How far away must something be before it is reflected
-		NearClipPlane = 2
+		NearClipPlane = .1
 
         // Set to false to render all 6 faces of the CubeMap at once (six times slower~)
         OneFacePerFrame = true
@@ -81,7 +81,7 @@ RESOURCE
         // Reflective/VertexLit
         // Reflective/Bumped Diffuse
 		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
 		realTimeReflection = False
 		
 
