--- a/GameData/FASA/Apollo/ApolloCSM/FASA_Apollo_CM.cfg
+++ b/GameData/FASA/Apollo/ApolloCSM/FASA_Apollo_CM.cfg
@@ -189,7 +189,7 @@ MODULE
         // How deep the reflection will be ("how far the reflection camera will view")
         FarClipPlane = 50000000000
 		// How far away must something be before it is reflected
-		NearClipPlane = 2
+		NearClipPlane = .1
 
         // Set to false to render all 6 faces of the CubeMap at once (six times slower~)
         OneFacePerFrame = true
@@ -199,7 +199,7 @@ MODULE
         // Reflective/VertexLit
         // Reflective/Bumped Diffuse
 		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
 		realTimeReflection = False
 		
 
@@ -228,9 +228,9 @@ MODULE
         SpecColorG = 0.8
         SpecColorB = 0.8
         SpecColorA = 0.8
-//		rimFalloff = 1.0
-//		rimColor = 0.642, 0.6445, 0.6414, 1.0
-//		ReflectionColor = 0.6442, 0.6445, 0.64, 0.4
+		rimFalloff = 1.0
+		rimColor = 0.642, 0.6445, 0.6414, 1.0
+		ReflectionColor = 0.6442, 0.6445, 0.64, 0.4
     }
 
 
