--- a/GameData/FASA/Apollo/ApolloCSM/FASA_Apollo_CM_Dec.cfg
+++ b/GameData/FASA/Apollo/ApolloCSM/FASA_Apollo_CM_Dec.cfg
@@ -74,7 +74,7 @@ MODULE
         // How deep the reflection will be ("how far the reflection camera will view")
         FarClipPlane = 500000000
 		// How far away must something be before it is reflected
-		NearClipPlane = 2
+		NearClipPlane = .1
 
         // Set to false to render all 6 faces of the CubeMap at once (six times slower~)
         OneFacePerFrame = true
@@ -84,7 +84,7 @@ MODULE
         // Reflective/VertexLit
         // Reflective/Bumped Diffuse
 		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
 		realTimeReflection = False
 		
 
