--- a/GameData/FASA/Apollo/FASA_Apollo_Eng/LFE_F1.cfg
+++ b/GameData/FASA/Apollo/FASA_Apollo_Eng/LFE_F1.cfg
@@ -211,8 +211,8 @@ MODULE
 
         // How deep the reflection will be ("how far the reflection camera will view")
         FarClipPlane = 500000000
-		// How far away must something be before it is reflected
-		NearClipPlane = 2
+		    // How far away must something be before it is reflected
+		NearClipPlane = .1
 
         // Set to false to render all 6 faces of the CubeMap at once (six times slower~)
         OneFacePerFrame = true
@@ -221,8 +221,8 @@ MODULE
         // Reflective/Diffuse
         // Reflective/VertexLit
         // Reflective/Bumped Diffuse
-		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Specular
+		    //Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
 		realTimeReflection = False
 		
 
@@ -250,9 +250,9 @@ MODULE
         SpecColorG = 0.8
         SpecColorB = 0.8
         SpecColorA = 0.8
-		rimFalloff = 5.0
-		rimColor = 0.8242, 0.6445, 0.1914, 1.0
-		ReflectionColor = 0.6242, 0.6445, 0.69, 1.0
+		    rimFalloff = 5.0
+	  	  rimColor = 0.8242, 0.6445, 0.1914, 1.0
+		    ReflectionColor = 0.6242, 0.6445, 0.69, 1.0
     }
 	
 }
