--- a/GameData/FASA/Apollo/FASA_Apollo_Eng/LFE_J2.cfg
+++ b/GameData/FASA/Apollo/FASA_Apollo_Eng/LFE_J2.cfg
@@ -150,7 +150,7 @@ MODULE
         // How deep the reflection will be ("how far the reflection camera will view")
         FarClipPlane = 500000000
 		// How far away must something be before it is reflected
-		NearClipPlane = 2
+		NearClipPlane = .1
 
         // Set to false to render all 6 faces of the CubeMap at once (six times slower~)
         OneFacePerFrame = true
@@ -160,7 +160,7 @@ MODULE
         // Reflective/VertexLit
         // Reflective/Bumped Diffuse
 		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
 		realTimeReflection = False
 		
 
@@ -180,7 +180,7 @@ MODULE
         // How shiny the specularity will be (if specular).
         // This value will be automatically set if it already exists on the previous shader and is not defined here.
         Shininess = 1.0
-		updateRate = 180
+		updateRate = 60
 
         // These variables should be used together only.
         // These values will be automatically set if they already exist on the previous shader and are not defined here
