--- a/GameData/FASA/Gemini2/FASA_Gemini_LFT/LFT_Gemini_Short.cfg
+++ b/GameData/FASA/Gemini2/FASA_Gemini_LFT/LFT_Gemini_Short.cfg
@@ -87,7 +87,7 @@ RESOURCE
         // Reflective/VertexLit
         // Reflective/Bumped Diffuse
 		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
 		realTimeReflection = False
 		
 
