--- a/GameData/FASA/Gemini2/FASA_Gemini_Lander_Pod/Gemini_Lander_Pod.cfg
+++ b/GameData/FASA/Gemini2/FASA_Gemini_Lander_Pod/Gemini_Lander_Pod.cfg
@@ -171,7 +171,7 @@ MODULE
         // Reflective/VertexLit
         // Reflective/Bumped Diffuse
 		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
 		realTimeReflection = False
 		
 
