--- a/GameData/FASA/Mercury/FASA_Mercury_LFT_Short/Merc_LFT_Short.cfg
+++ b/GameData/FASA/Mercury/FASA_Mercury_LFT_Short/Merc_LFT_Short.cfg
@@ -80,7 +80,7 @@ RESOURCE
         // Reflective/VertexLit
         // Reflective/Bumped Diffuse
 		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
 		realTimeReflection = False
 		
 
