FASA 1.3.1 Update Pass 1
* fixed parachute values to make pods and probes land safely again
* reinitialized reflections based on ReflectionPlugin - changed all shaders to Bumped Diffuse
* initialized first pass of TexturesUnlimited configs to make RP obsolete in the future, disabled by default

--- a/GameData/FASA/Apollo/ApolloCSM/FASA_Apollo_CM_Top.cfg
+++ b/GameData/FASA/Apollo/ApolloCSM/FASA_Apollo_CM_Top.cfg
@@ -78,7 +78,7 @@ MODULE
         // How deep the reflection will be ("how far the reflection camera will view")
         FarClipPlane = 50000000000
 		// How far away must something be before it is reflected
-		NearClipPlane = .1
+		NearClipPlane = 2
 
         // Set to false to render all 6 faces of the CubeMap at once (six times slower~)
         OneFacePerFrame = true
