--- a/GameData/FASA/Apollo/ApolloCSM/FASA_Apollo_CM_parachutes.cfg
+++ b/GameData/FASA/Apollo/ApolloCSM/FASA_Apollo_CM_parachutes.cfg
@@ -68,7 +68,7 @@ MODULE
 	canopyName = Canopy
 	stowedDrag = 0.22
 	semiDeployedDrag = 3
-	fullyDeployedDrag = 600
+	fullyDeployedDrag = 500
 	minAirPressureToOpen = 0.02
 	deployAltitude = 1000
 	deploymentSpeed = 0.75
@@ -76,20 +76,20 @@ MODULE
 			chuteMaxTemp = 1200
 		chuteThermalMassPerArea = 0.08
 		heatConductivity = 0.01
-//	autoDeployDelay = 3	
+	autoDeployDelay = 3	
 }
-	// MODULE
-	// {
-		// name = ModuleDragModifier
-		// dragCubeName = SEMIDEPLOYED
-		// dragModifier = 2.5
-	// }
-	// MODULE
-	// {
-		// name = ModuleDragModifier
-		// dragCubeName = DEPLOYED
-		// dragModifier = 8 
-	// }
+	MODULE
+	 {
+		 name = ModuleDragModifier
+		 dragCubeName = SEMIDEPLOYED
+		 dragModifier = 0.67
+	 }
+	 MODULE
+	 {
+		 name = ModuleDragModifier
+		 dragCubeName = DEPLOYED
+		 dragModifier = 20
+	 }
 	// DRAG_CUBE
 	// {
 		// cube = PACKED, 0.6278962,0.6384501,0.7139156, 0.6278962,0.6384546,0.7139156, 1.108058,0.7324356,0.6995487, 1.108058,0.9454595,0.1663975, 0.6278962,0.6395905,0.7139157, 0.6278962,0.6373801,0.7139157, 0,0.2645478,0, 1.233453,0.6659461,1.233453
