--- a/GameData/FASA/Probes/Probe_Parachute_Box/Probe_Parachute.cfg
+++ b/GameData/FASA/Probes/Probe_Parachute_Box/Probe_Parachute.cfg
@@ -67,7 +67,7 @@ MODULE
 	canopyName = canopy
 	stowedDrag = 0.2
 	semiDeployedDrag = 2
-	fullyDeployedDrag = 50
+	fullyDeployedDrag = 100
 	minAirPressureToOpen = 0.1
 	deployAltitude = 1000
 	deploymentSpeed = 0.3
@@ -77,17 +77,17 @@ MODULE
 			heatConductivity = 0.01
 }
 	// MODULE
-	// {
-		// name = ModuleDragModifier
-		// dragCubeName = SEMIDEPLOYED
-		// dragModifier = .1
-	// }
-	// MODULE
-	// {
-		// name = ModuleDragModifier
-		// dragCubeName = DEPLOYED
-		// dragModifier = 1
-	// }
+	 {
+		 name = ModuleDragModifier
+		 dragCubeName = SEMIDEPLOYED
+		 dragModifier = 5
+	 }
+	 MODULE
+	 {
+		 name = ModuleDragModifier
+		 dragCubeName = DEPLOYED
+		 dragModifier = 15
+	 }
 	// DRAG_CUBE
 	// {
 		// cube = PACKED, 0.0494743, 0.7919335, 0.0494743, 0.771063, 0.1814466, 0.9421492, 0.1814466, 0.8953546, 0.04153702, 0.7587959, 0.04153702, 0.7699606
