--- a/GameData/FASA/Gemini2/FASA_Gemini_Parachute2/GeminParachute2.cfg
+++ b/GameData/FASA/Gemini2/FASA_Gemini_Parachute2/GeminParachute2.cfg
@@ -73,7 +73,7 @@ MODULE
 	canopyName = canopy
 	stowedDrag = 0.20
 	semiDeployedDrag = 5
-	fullyDeployedDrag = 650
+	fullyDeployedDrag = 500
 	minAirPressureToOpen = 0.02
 	deployAltitude = 1000
 	deploymentSpeed = 0.15
@@ -91,18 +91,18 @@ MODULE
 		// cube = SEMIDEPLOYED, 7.525329,0.2318662,0.5391445, 7.525329,0.227902,0.5391445, 0.5277259,0.06571814,4.172107, 0.5277259,0.1769343,14.9913, 7.588403,0.2288947,0.7006975, 7.588403,0.2283394,0.7967932, 6.556511E-07,8.838122,1.147389E-05, 0.8259839,17.83199,0.8210163
 		// cube = DEPLOYED, 72.87113,7.589109,4.578267, 72.87113,7.573455,4.578267, 52.80032,8.565606,4.172107, 52.80032,6.532588,14.9913, 73.68147,7.515025,4.551372, 73.68147,7.478681,4.551372, 6.67572E-06,8.838122,0.0001244545, 8.25984,17.83199,8.210144
 	// }
-	// MODULE
-	// {
-		// name = ModuleDragModifier
-		// dragCubeName = SEMIDEPLOYED
-		// dragModifier = 2
-	// }
-	// MODULE
-	// {
-		// name = ModuleDragModifier
-		// dragCubeName = DEPLOYED
-		// dragModifier = 16
-	// }
+	 MODULE
+	 {
+		 name = ModuleDragModifier
+		 dragCubeName = SEMIDEPLOYED
+		 dragModifier = 2
+	 }
+	MODULE
+	 {
+		 name = ModuleDragModifier
+		 dragCubeName = DEPLOYED
+		 dragModifier = 45
+	 }
 	MODULE
 	{
 		name = ModuleTestSubject
