--- a/GameData/FASA/FASA_TU_ReflectionsSetup.cfg
+++ b/GameData/FASA/FASA_TU_ReflectionsSetup.cfg
@@ -1,4 +1,4 @@
-@REFLECTION_CONFIG[default]:NEEDS[TexturesUnlimited]:!NEEDS[TextureReplacerReplaced]:!NEEDS[ReflectionPlugin]
+@REFLECTION_CONFIG[default]:NEEDS[TexturesUnlimited&&!TextureReplacerReplaced&&!ReflectionPlugin]
 {
 	%enabled = false
 }
