--- a/GameData/FASA/Gemini2/FASA_Gemini_Pod2/Gemini_Pod2_RCS.cfg
+++ b/GameData/FASA/Gemini2/FASA_Gemini_Pod2/Gemini_Pod2_RCS.cfg
@@ -54,7 +54,8 @@ buoyancyUseSine = False
 
 MODULE
 {
-	name = ModuleRCS
+	name = ModuleRCSFX
+	runningEffectName = running
 	thrusterTransformName = RCSthruster
 	thrusterPower = 0.75
 	resourceName = MonoPropellant
@@ -66,6 +67,37 @@ MODULE
   	 key = 1 175
  	}
 }
+
+EFFECTS
+	{
+		running
+		{
+			AUDIO_MULTI
+			{
+				channel = Ship
+				transformName = RCSthruster
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.1 0.0
+				volume = 0.5 0.025
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCSthruster
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}		
+	}
 
 //MODULE
 //{
