Fix cfg syntax errors

--- a/GameData/FASA/Gemini2/FASA_Gemini_Lander_Legs/Gemini_Lander_Legs.cfg
+++ b/GameData/FASA/Gemini2/FASA_Gemini_Lander_Legs/Gemini_Lander_Legs.cfg
@@ -1,7 +1,7 @@
 PART
 {
 
---- general parameters ---
+// --- general parameters ---
 name = FASA_Gemini_Lander_Legs
 module = Part
 author = Frizzank
