--- a/GameData/FASA/Probes/Probe_Parachute_Box/Probe_Parachute.cfg
+++ b/GameData/FASA/Probes/Probe_Parachute_Box/Probe_Parachute.cfg
@@ -77,11 +77,11 @@ MODULE
 			heatConductivity = 0.01
 }
 	// MODULE
-	 {
-		 name = ModuleDragModifier
-		 dragCubeName = SEMIDEPLOYED
-		 dragModifier = 5
-	 }
+	// {
+	//	 name = ModuleDragModifier
+	//	 dragCubeName = SEMIDEPLOYED
+	//	 dragModifier = 5
+	// }
 	 MODULE
 	 {
 		 name = ModuleDragModifier
