On second thought, that looks like a continuation of the description

--- a/GameData/FASA/Mercury/FASA_Mercury_LFEngine/Merc_LFE.cfg
+++ b/GameData/FASA/Mercury/FASA_Mercury_LFEngine/Merc_LFE.cfg
@@ -36,8 +36,7 @@ category = Propulsion
 subcategory = 0
 title = Mercury Liquid Fuelled Retro Rocket Engine pack
 manufacturer = FASA
-description = The more advanced version of the rocket engines for the Mercury capsule. Small engine pack with engines you can turn off. Caries with it an almost useless amount of fuel.
-// Staging this engine will detach it AND activate it. Use the action groups or right click on it to activate this engine!!!
+description = The more advanced version of the rocket engines for the Mercury capsule. Small engine pack with engines you can turn off. Caries with it an almost useless amount of fuel. Staging this engine will detach it AND activate it. Use the action groups or right click on it to activate this engine!!!
 // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 attachRules = 1,0,1,1,0
 
